# tcpechoserver

./: .gitignore  README.md  run_bench.py  run_benchmark.py  server_config.py
bench_project/: __init__.py  bench_config.json  config.py  main.py  requirements.txt  run_bench.py
bench_project/reports/: __init__.py
bench_project/runners/: __init__.py  combined_benchmark.py  regular_benchmark.py  start_server.py  strace_benchmark.py
bench_project/utils/: command.py  parsers.py
benchmark_results/: regular_results_20250320-205437.csv  regular_results_20250320-211640.csv  regular_results_20250320-211939.csv  regular_results_20250320-212554.csv  regular_results_20250320-213225.csv  regular_results_20250320-213643.csv
benchmark_results/combined_benchmark_20250320-211607/: benchmark_log.txt
benchmark_results/combined_benchmark_20250320-211640/: benchmark_log.txt  regular_benchmark_conn_1000_20250320-211640.txt  regular_benchmark_conn_100_20250320-211640.txt  regular_benchmark_conn_10_20250320-211640.txt  regular_benchmark_conn_1_20250320-211640.txt
benchmark_results/combined_benchmark_20250320-211939/: benchmark_log.txt  error_conn_5000_20250320-211939.txt  regular_benchmark_conn_1000_20250320-211939.txt  regular_benchmark_conn_100_20250320-211939.txt  regular_benchmark_conn_10_20250320-211939.txt  regular_benchmark_conn_1_20250320-211939.txt  regular_benchmark_conn_2000_20250320-211939.txt
benchmark_results/combined_benchmark_20250320-212524/: benchmark_log.txt
benchmark_results/combined_benchmark_20250320-212554/: benchmark_log.txt  regular_benchmark_conn_1000_20250320-212554.txt  regular_benchmark_conn_100_20250320-212554.txt  regular_benchmark_conn_10_20250320-212554.txt  regular_benchmark_conn_1_20250320-212554.txt  regular_benchmark_conn_2000_20250320-212554.txt
benchmark_results/combined_benchmark_20250320-213155/: benchmark_log.txt
benchmark_results/combined_benchmark_20250320-213225/: benchmark_log.txt  regular_benchmark_conn_1000_20250320-213225.txt  regular_benchmark_conn_100_20250320-213225.txt  regular_benchmark_conn_10_20250320-213225.txt  regular_benchmark_conn_1_20250320-213225.txt  regular_benchmark_conn_2000_20250320-213225.txt  regular_benchmark_conn_4000_20250320-213225.txt
benchmark_results/combined_benchmark_20250320-213643/: benchmark_log.txt  regular_benchmark_conn_1000_20250320-213643.txt  regular_benchmark_conn_100_20250320-213643.txt  regular_benchmark_conn_10_20250320-213643.txt  regular_benchmark_conn_1_20250320-213643.txt  regular_benchmark_conn_2000_20250320-213643.txt  regular_benchmark_conn_4000_20250320-213643.txt
epollechoserver/: CMakeLists.txt  Cargo.toml  bench.rs  run_bench.py
epollechoserver/client/: CMakeLists.txt  main.cpp
epollechoserver/client/include/: ChatClient.h
epollechoserver/client/src/: ChatClient.cpp
epollechoserver/server/: CMakeLists.txt  main.cpp
epollechoserver/server/include/: Context.h  EPoll.h  EPollBuffer.h  Listener.h  Logger.h  Session.h  SessionManager.h  SocketAddress.h
epollechoserver/server/src/: EPoll.cpp  EPollBuffer.cpp  Listener.cpp  Session.cpp  SessionManager.cpp  SocketManager.cpp
tcpchatserver/: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  bench.rs  locust-guide.md  locustfile.py
tcpchatserver/client/: main.cpp
tcpchatserver/client/include/: Context.h
tcpchatserver/client/src/: ChatClient.cpp
tcpchatserver/server/: main.cpp
tcpchatserver/server/include/: IOUring.h  Listener.h  Logger.h  Session.h  SessionManager.h  Socket.h  SocketManager.h  SocketUtil.h  UringBuffer.h  Utils.h
tcpchatserver/server/src/: IOUring.cpp  Listener.cpp  Session.cpp  SessionManager.cpp  SocketManager.cpp  UringBuffer.cpp
